# lucide-cpp

./: .gitmodules  CMakeLists.txt  lucideicon.cpp  lucideicon.hpp
.github/workflows/: buildtest.yml  ci.yml
cmake/: LucideIconCppConfig.cmake.in
example/: CMakeLists.txt
example/src/: main.cc
script/: buildbinary.py
src/: iconwrapper.cpp  iconwrapper.hpp
